# jobjitsu

./: .cursorrules  .gitignore  .npmrc  .prettierignore  AI_DEVELOPMENT_WORKFLOW.md  ARCHITECTURE_PRINCIPLES.md  ARCHITECTURE_READINESS_REPORT.md  ARCHITECTURE_REVIEW.md  DEFINITION_OF_DONE.md  DOCUMENTATION_REORGANIZATION_PLAN.md  ENGINEERING_CONSTITUTION.md  IMPLEMENTATION_ORDER.md  IMPLEMENTATION_ROADMAP.md  MANIFESTO.md  MONOREPO.md  PROJECT_BACKLOG_SUMMARY.md  PROJECT_CONFIGURATION_REPORT.md  PROJECT_GAP_ANALYSIS.md  README.md  REPOSITORY_INSPECTION_REPORT.md  SYSTEM_ARCHITECTURE.md  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.shared.ts  vitest.workspace.ts
.changeset/: README.md  config.json  scaffold-monorepo.md
.cursor/commands/: generate-commit-message.md
.cursor/prompts/: article-review.md
.cursor/rules/: architecture.mdc  branding-development.mdc  coding-standards.mdc  commit-after-completion.mdc  commit-messages.mdc  definition-of-done.mdc  git-branching.mdc  (+3 more)
app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/permissions/: allow-data-directory.toml
app/src-tauri/src/: lib.rs  main.rs
assets/: README.md
examples/: README.md
plugins/: README.md
scripts/: README.md  dev-app.sh  dev-desktop.sh  dev-website.sh  set-project-status.sh  setup.sh
website/: README.md  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
(+171 files in other folders)
