[package]
name = "jobjitsu"
version = "0.0.0"
description = "JobJitsu desktop host (Tauri) — privileged shell for the Career OS"
authors = ["JobJitsu contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "jobjitsu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
